--- a/LnLBackEndSystem/LnLBackEndSystem.csproj
+++ b/LnLBackEndSystem/LnLBackEndSystem.csproj
@@ -156,6 +156,12 @@
     <Compile Include="Secretary_login.Designer.cs">
       <DependentUpon>Secretary_login.cs</DependentUpon>
     </Compile>
+    <Compile Include="Tab_login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Tab_login.Designer.cs">
+      <DependentUpon>Tab_login.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Admin_login.resx">
       <DependentUpon>Admin_login.cs</DependentUpon>
     </EmbeddedResource>
@@ -192,6 +198,9 @@
     </Compile>
     <EmbeddedResource Include="Secretary_login.resx">
       <DependentUpon>Secretary_login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Tab_login.resx">
+      <DependentUpon>Tab_login.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
