--- a/LnLBackEndSystem/LnLBackEndSystem.csproj
+++ b/LnLBackEndSystem/LnLBackEndSystem.csproj
@@ -220,6 +220,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="Unblock.ps1" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
