--- a/LnLBackEndSystem/LnLBackEndSystem.csproj
+++ b/LnLBackEndSystem/LnLBackEndSystem.csproj
@@ -142,19 +142,37 @@
     <Compile Include="frmTableSelect.Designer.cs">
       <DependentUpon>frmTableSelect.cs</DependentUpon>
     </Compile>
-    <Compile Include="Guest_login.cs">
+    <Compile Include="Guest_form.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Guest_login.Designer.cs">
-      <DependentUpon>Guest_login.cs</DependentUpon>
+    <Compile Include="Guest_form.Designer.cs">
+      <DependentUpon>Guest_form.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Secretary_login.cs">
+    <Compile Include="Secretary_delete.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Secretary_login.Designer.cs">
-      <DependentUpon>Secretary_login.cs</DependentUpon>
+    <Compile Include="Secretary_delete.Designer.cs">
+      <DependentUpon>Secretary_delete.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Secretary_form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Secretary_form.Designer.cs">
+      <DependentUpon>Secretary_form.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Secretary_insert.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Secretary_insert.Designer.cs">
+      <DependentUpon>Secretary_insert.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Secretary_update.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Secretary_update.Designer.cs">
+      <DependentUpon>Secretary_update.cs</DependentUpon>
     </Compile>
     <Compile Include="Tab_login.cs">
       <SubType>Form</SubType>
@@ -183,8 +201,8 @@
     <EmbeddedResource Include="frmTableSelect.resx">
       <DependentUpon>frmTableSelect.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Guest_login.resx">
-      <DependentUpon>Guest_login.cs</DependentUpon>
+    <EmbeddedResource Include="Guest_form.resx">
+      <DependentUpon>Guest_form.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -196,8 +214,17 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="Secretary_login.resx">
-      <DependentUpon>Secretary_login.cs</DependentUpon>
+    <EmbeddedResource Include="Secretary_delete.resx">
+      <DependentUpon>Secretary_delete.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Secretary_form.resx">
+      <DependentUpon>Secretary_form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Secretary_insert.resx">
+      <DependentUpon>Secretary_insert.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Secretary_update.resx">
+      <DependentUpon>Secretary_update.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Tab_login.resx">
       <DependentUpon>Tab_login.cs</DependentUpon>
