--- a/LnLBackEndSystem/LnLBackEndSystem.csproj
+++ b/LnLBackEndSystem/LnLBackEndSystem.csproj
@@ -88,7 +88,26 @@
       <HintPath>..\Libraries\ReleaseSerializer\SerializationClass.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
+    </Reference>
+    <Reference Include="System.ComponentModel" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
+    <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Management" />
+    <Reference Include="System.Memory, Version=4.0.1.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Memory.4.5.3\lib\netstandard2.0\System.Memory.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Numerics" />
+    <Reference Include="System.Numerics.Vectors, Version=4.1.3.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Numerics.Vectors.4.4.0\lib\net46\System.Numerics.Vectors.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.4.1, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.4.5.2\lib\netstandard2.0\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -112,6 +131,12 @@
     <Compile Include="Admin_signup.Designer.cs">
       <DependentUpon>Admin_signup.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmMaintaince.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmMaintaince.Designer.cs">
+      <DependentUpon>frmMaintaince.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmConsoleSettings.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -123,12 +148,6 @@
     </Compile>
     <Compile Include="frmMain.Designer.cs">
       <DependentUpon>frmMain.cs</DependentUpon>
-    </Compile>
-    <Compile Include="frmDatabaseManagement.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="frmDatabaseManagement.Designer.cs">
-      <DependentUpon>frmDatabaseManagement.cs</DependentUpon>
     </Compile>
     <Compile Include="frmSplash.cs">
       <SubType>Form</SubType>
@@ -147,6 +166,12 @@
     </Compile>
     <Compile Include="frmTableSelect.Designer.cs">
       <DependentUpon>frmTableSelect.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmDataManagement.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmDataManagement.Designer.cs">
+      <DependentUpon>frmDataManagement.cs</DependentUpon>
     </Compile>
     <Compile Include="Guest_form.cs">
       <SubType>Form</SubType>
@@ -192,14 +217,14 @@
     <EmbeddedResource Include="Admin_signup.resx">
       <DependentUpon>Admin_signup.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmMaintaince.resx">
+      <DependentUpon>frmMaintaince.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmConsoleSettings.resx">
       <DependentUpon>frmConsoleSettings.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="frmDatabaseManagement.resx">
-      <DependentUpon>frmDatabaseManagement.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmSplash.resx">
       <DependentUpon>frmSplash.cs</DependentUpon>
@@ -209,6 +234,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmTableSelect.resx">
       <DependentUpon>frmTableSelect.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmDataManagement.resx">
+      <DependentUpon>frmDataManagement.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Guest_form.resx">
       <DependentUpon>Guest_form.cs</DependentUpon>
@@ -238,6 +266,7 @@
     <EmbeddedResource Include="Tab_login.resx">
       <DependentUpon>Tab_login.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -255,6 +284,9 @@
   <ItemGroup>
     <Content Include="logo_xaL_icon.ico" />
     <Content Include="WordDelegation.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
