--- a/LnLBackEndSystem/LnLBackEndSystem.csproj
+++ b/LnLBackEndSystem/LnLBackEndSystem.csproj
@@ -131,6 +131,7 @@
     <Compile Include="Admin_signup.Designer.cs">
       <DependentUpon>Admin_signup.cs</DependentUpon>
     </Compile>
+    <Compile Include="DBEditCompsClass.cs" />
     <Compile Include="frmMaintaince.cs">
       <SubType>Form</SubType>
     </Compile>
