--- a/LnLSupportLibraries/LnLSupportLibraries.csproj
+++ b/LnLSupportLibraries/LnLSupportLibraries.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serializing.cs" />
     <Compile Include="TableObjects.cs" />
+    <Compile Include="TableToComps.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
