--- a/LnLBackEndSystem/LnLBackEndSystem.csproj
+++ b/LnLBackEndSystem/LnLBackEndSystem.csproj
@@ -170,6 +170,12 @@
     <Compile Include="frmMain.Designer.cs">
       <DependentUpon>frmMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmPayConfirm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmPayConfirm.Designer.cs">
+      <DependentUpon>frmPayConfirm.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmRequestStock.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -312,6 +318,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmPayConfirm.resx">
+      <DependentUpon>frmPayConfirm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmRequestStock.resx">
       <DependentUpon>frmRequestStock.cs</DependentUpon>
