--- a/LnLBackEndSystem/LnLBackEndSystem.csproj
+++ b/LnLBackEndSystem/LnLBackEndSystem.csproj
@@ -146,6 +146,18 @@
     <Compile Include="Forgot_password.Designer.cs">
       <DependentUpon>Forgot_password.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmBarpersonLogin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmBarpersonLogin.Designer.cs">
+      <DependentUpon>frmBarpersonLogin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmCEO.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmCEO.Designer.cs">
+      <DependentUpon>frmCEO.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmImageManager.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -218,18 +230,6 @@
     <Compile Include="frmDataManagement.Designer.cs">
       <DependentUpon>frmDataManagement.cs</DependentUpon>
     </Compile>
-    <Compile Include="Guest_form.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Guest_form.Designer.cs">
-      <DependentUpon>Guest_form.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Guest_order.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Guest_order.Designer.cs">
-      <DependentUpon>Guest_order.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Secratary_Booking_Management.cs">
@@ -261,12 +261,6 @@
     </Compile>
     <Compile Include="Secretary_update.Designer.cs">
       <DependentUpon>Secretary_update.cs</DependentUpon>
-    </Compile>
-    <Compile Include="tabPurchase.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="tabPurchase.Designer.cs">
-      <DependentUpon>tabPurchase.cs</DependentUpon>
     </Compile>
     <Compile Include="Tab_login.cs">
       <SubType>Form</SubType>
@@ -307,6 +301,12 @@
     <EmbeddedResource Include="Forgot_password.resx">
       <DependentUpon>Forgot_password.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmBarpersonLogin.resx">
+      <DependentUpon>frmBarpersonLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmCEO.resx">
+      <DependentUpon>frmCEO.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmImageManager.resx">
       <DependentUpon>frmImageManager.cs</DependentUpon>
     </EmbeddedResource>
@@ -343,12 +343,6 @@
     <EmbeddedResource Include="frmDataManagement.resx">
       <DependentUpon>frmDataManagement.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Guest_form.resx">
-      <DependentUpon>Guest_form.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Guest_order.resx">
-      <DependentUpon>Guest_order.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -373,9 +367,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Secretary_update.resx">
       <DependentUpon>Secretary_update.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="tabPurchase.resx">
-      <DependentUpon>tabPurchase.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Tab_login.resx">
       <DependentUpon>Tab_login.cs</DependentUpon>
