Worked on registration and login.aspx forms

--- a/LnLWebEndSystem/LnLWebEndSystem.csproj
+++ b/LnLWebEndSystem/LnLWebEndSystem.csproj
@@ -43,6 +43,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="LnLSupportLibraries">
+      <HintPath>..\Libraries\LnLSupportLibraries.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
@@ -67,17 +70,41 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Bookings.aspx" />
+    <Content Include="Login.aspx" />
+    <Content Include="Styles\images\cocktails.jpg" />
+    <Content Include="Styles\images\eating.jpg" />
+    <Content Include="Styles\images\food.jpg" />
+    <Content Include="Styles\general.css" />
+    <Content Include="Styles\images\hero.jpg" />
+    <Content Include="Styles\images\Logo-removebg-preview_1.png" />
+    <Content Include="Styles\style.css" />
     <Content Include="Web.config" />
-    <Content Include="Main.aspx" />
+    <Content Include="Index.aspx" />
+    <Content Include="Styles\images\xavier-souty-G2GfUWZgMS0-unsplash.jpg" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Main.aspx.cs">
-      <DependentUpon>Main.aspx</DependentUpon>
+    <Compile Include="Bookings.aspx.cs">
+      <DependentUpon>Bookings.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Main.aspx.designer.cs">
-      <DependentUpon>Main.aspx</DependentUpon>
+    <Compile Include="Bookings.aspx.designer.cs">
+      <DependentUpon>Bookings.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Login.aspx.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Login.aspx.designer.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Index.aspx.cs">
+      <DependentUpon>Index.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Index.aspx.designer.cs">
+      <DependentUpon>Index.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
