--- a/LnLBackEndSystem/LnLBackEndSystem.csproj
+++ b/LnLBackEndSystem/LnLBackEndSystem.csproj
@@ -230,6 +230,12 @@
     <Compile Include="frmDataManagement.Designer.cs">
       <DependentUpon>frmDataManagement.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmTabRegister.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmTabRegister.Designer.cs">
+      <DependentUpon>frmTabRegister.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Secratary_Booking_Management.cs">
@@ -342,6 +348,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmDataManagement.resx">
       <DependentUpon>frmDataManagement.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmTabRegister.resx">
+      <DependentUpon>frmTabRegister.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
