--- a/LnLBackEndSystem/LnLBackEndSystem.csproj
+++ b/LnLBackEndSystem/LnLBackEndSystem.csproj
@@ -262,11 +262,11 @@
     <Compile Include="Secretary_update.Designer.cs">
       <DependentUpon>Secretary_update.cs</DependentUpon>
     </Compile>
-    <Compile Include="Tab_login.cs">
+    <Compile Include="frmTabLogin.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Tab_login.Designer.cs">
-      <DependentUpon>Tab_login.cs</DependentUpon>
+    <Compile Include="frmTabLogin.Designer.cs">
+      <DependentUpon>frmTabLogin.cs</DependentUpon>
     </Compile>
     <Compile Include="frmTabPayment.cs">
       <SubType>Form</SubType>
@@ -368,8 +368,8 @@
     <EmbeddedResource Include="Secretary_update.resx">
       <DependentUpon>Secretary_update.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Tab_login.resx">
-      <DependentUpon>Tab_login.cs</DependentUpon>
+    <EmbeddedResource Include="frmTabLogin.resx">
+      <DependentUpon>frmTabLogin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmTabPayment.resx">
       <DependentUpon>frmTabPayment.cs</DependentUpon>
